# vidplot

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
demo/: demo.py  style_demo.py
demo/assets/: demo_bboxes.json  demo_labels.csv
docs/: styling_guide.md
tests/scripts/: generate_test_labels.py  generate_test_segmentations.py  generate_test_video.py  generate_test_videos.py
tests/test_data/frame_labels/: moving_square.csv  moving_square.npz  moving_square_dict.json  short_test.csv  short_test.json  short_test.npz  static_test.csv  static_test.json  static_test.npz
tests/unit/: test_all.py  test_basic.py  test_encode.py  test_new_encoding.py  test_orchestrator.py  test_renderers.py  test_segmentation.py  test_streamers.py  test_video_canvas.py
vidplot/: __init__.py
vidplot/core/: __init__.py  orchestrator.py  renderer.py  streamer.py  video_canvas.py
vidplot/renderers/: __init__.py  box_renderer.py  coco_keypoints_3d_renderer.py  coco_keypoints_renderer.py  horizontal_label_bar_renderer.py  label_bar_renderer.py  progress_renderer.py  rgb_renderer.py  segmentation_renderer.py  string_renderer.py
vidplot/streamers/: __init__.py  label_bar_streamer.py  progress_streamer.py  static_streamer.py  static_tabular_streamer.py  tabular_streamer.py  timestamped_streamer.py  utils.py  video_streamer.py
vidplot/style/: README.md  __init__.py
