[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidplot"
version = "0.1.1"
description = "A video annotation visualizer for computer vision and data science workflows."
authors = [
    { name = "Victor Li", email = "vhl2022@nyu.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
decord = ["decord>=0.6.0"]
av = ["av>=10.0.0"]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "flake8-pyproject==1.2.3",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ruff>=0.4.0"
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=vidplot --cov-report=term-missing"

[tool.flake8]
max-line-length = 100
ignore = ["E203", "E226"]
exclude = [".git", "__pycache__", "build", "dist", "venv"] 

[tool.ruff]
line-length = 100